--- a/index.html
+++ b/index.html
@@ -86,10 +86,14 @@
                 <div class="contenido_inspoinicio">
                     <img src="imagenes.html/PinchofYum.jpg" class="img-inspo">
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, vel illum! Doloremque
-                        consequatur
-                        nihil
-                        enim, eaque a mollitia ex error.</p>
+                  
+                        <div class="contenido_inspoinicio_col">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, eos! Alias consectetur, incidunt
+                                iure
+                                quibusdam quia corrupti modi! Officiis, perferendis!</p>
+    
+                            <a href="https://pinchofyum.com/" class="botonreceta">Ver</a>
+                        </div>
                 </div>
 
             </div>
@@ -98,11 +102,16 @@
 
                 <h3><a href="https://www.recipegirl.com/">Recipe Girl</a> </h3>
 
-                <div class="contenido_inspoinicio"><img src="imagenes.html/RecipeGirl.jpg" alt="recipegirl.jpg">
+                <div class="contenido_inspoinicio">
+                    <img src="imagenes.html/RecipeGirl.jpg" alt="recipegirl.jpg">
+                    <div class="contenido_inspoinicio_col">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, eos! Alias consectetur, incidunt
+                            iure
+                            quibusdam quia corrupti modi! Officiis, perferendis!</p>
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, eos! Alias consectetur, incidunt
-                        iure
-                        quibusdam quia corrupti modi! Officiis, perferendis!</p>
+                        <a href="imagenes.html/RecipeGirl.jpg" class="botonreceta">Ver</a>
+                    </div>
+
                 </div>
 
             </div>
