--- a/pages/recetasdulces.html
+++ b/pages/recetasdulces.html
@@ -60,7 +60,7 @@
             </div>
             <div class="elemento_galeriarecetas">
                 <h3>Blondies</h3>
-                <img src="../imagenes.html/blondies2.jpg" alt="blondies.jpg" width="300px">
+                <img src="../imagenes.html/blondies-ok.jpg" alt="blondies.jpg" width="300px">
                 <a href="" class="botonreceta"> Ver</a>
             </div>
     
