--- a/pages/recetassaladas.html
+++ b/pages/recetassaladas.html
@@ -57,7 +57,7 @@
     
             </div>
             <div class="elemento_galeriarecetas">
-                <h3>Tagliatelle alla Carbonara</h3>
+                <h3>Tagliatelle Carbonara</h3>
                 <img src="../imagenes.html/carbonara-ok.jpg" alt="tagliatelle-carbonara.jpg">
                 <a href="" class="botonreceta"> Ver</a>
             </div>
