Estilo agregado a recetas

--- a/pages/Recetas Saladas/pasteldechoclo.html
+++ b/pages/Recetas Saladas/pasteldechoclo.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href=../../CSS/proyectofinal.css>
+    <title>Cocina de Margarita</title>
+    <link rel="icon" type="image/jpg" href="imagenes.html/favicon_daisy.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,500;0,600;1,200;1,400&display=swap"
+        rel="stylesheet">
 
-    <title>Document</title>
 </head>
 
+
 <body>
+    <header>
+        <div>
+            <h1 id="lacocinademargarita">La Cocina de Margarita</h1>
+        </div>
+
+        <nav class="menuppal">
+            <!--menú de navegación-->
+            <ul class="listamenu">
+                <li><a href="../../index.html" class=" elementomenu active">Inicio</a></li>
+                <li><a href="../recetassaladas.html" class="elementomenu">Recetas Saladas</a></li>
+                <li><a href="../recetasdulces.html" class="elementomenu">Recetas Dulces</a></li>
+                <li><a href="../blog.html" class="elementomenu">Blog</a></li>
+                <li><a href=../contacto.html class="elementomenu">Contacto</a></li>
+
+            </ul>
+
+        </nav>
+
+    </header>
     <div>
         <h1>Pastel de Choclo</h1>
 
@@ -23,25 +50,25 @@
     <ul>
         <li>Tiempo de preparación: 60minuos</li>
         <li>Tiempo de Cocción: 60 minutos</li>
-</ul>
-        <section>
-            <div>
-                <h2>Ingredientes</h2>
+    </ul>
+    <section>
+        <div>
+            <h2>Ingredientes</h2>
 
-                <h3>Para la pastelera</h3>
+            <h3>Para la pastelera</h3>
 
-                <ul>
+            <ul>
                 <li>2 cucharadas de aceite vegetal o mantequilla</li>
                 <li>4 bolsas de choclo congelado</li>
                 <li>1/2 taza de leche entera</li>
                 <li>3 cucharadas de harina de maíz, polenta o chuchoca para espesar</li>
                 <li>1 manojo de albahaca, unas 10 hojas</li>
                 <li>sal, pimienta y merquén</li>
-                </ul>
-                
-                <h3>Para el pino</h3>
+            </ul>
 
-                <ul>
+            <h3>Para el pino</h3>
+
+            <ul>
                 <li>1 kilo de carne molida de vacuno</li>
                 <li>1 taza de agua o caldo de vacuno</li>
                 <li>3 cebollas picadas en cubos finos</li>
@@ -49,36 +76,48 @@
                 <li>1/2 cucharadita de comino en polvo</li>
                 <li>sal, pimienta</li>
                 <li>2 cucharadas de harina, opcional</li>
-       </ul>
-            </div>
-            <div>
-                <h2>Preparación paso a paso</h2>
-                <h3>Para el pino</h3>
-                <ol>
-                    <li>Calentar en una olla grande el aceite, sofreír la carne hasta que se dore un poco, unos 8 minutos revolviendo ocasionalmente, agregar el ají de color, sal, pimienta y comino, sofreír unos 2 minutos más.</li>
-                    <li>Agregar el caldo y dejar cocinar 30 minutos a fuego bajo.</li>
-                    <li>Agregar las cebollas incorporar bien y dejar cocinar a fuego medio hasta que la cebolla este suave, unos 30 minutos más, revolviendo ocasionalmente.</li>
-                    <li>Apagar el fuego y agregar el harina (si lo desean menos jugoso) y revolver bien, ajustar la sazón de ser necesario. Dejar enfriar y refrigerar o usar de inmediato.</li>
-                </ol> 
+            </ul>
+        </div>
+        <div>
+            <h2>Preparación paso a paso</h2>
+            <h3>Para el pino</h3>
+            <ol>
+                <li>Calentar en una olla grande el aceite, sofreír la carne hasta que se dore un poco, unos 8 minutos
+                    revolviendo ocasionalmente, agregar el ají de color, sal, pimienta y comino, sofreír unos 2 minutos
+                    más.</li>
+                <li>Agregar el caldo y dejar cocinar 30 minutos a fuego bajo.</li>
+                <li>Agregar las cebollas incorporar bien y dejar cocinar a fuego medio hasta que la cebolla este suave,
+                    unos 30 minutos más, revolviendo ocasionalmente.</li>
+                <li>Apagar el fuego y agregar el harina (si lo desean menos jugoso) y revolver bien, ajustar la sazón de
+                    ser necesario. Dejar enfriar y refrigerar o usar de inmediato.</li>
+            </ol>
 
-                <h3>Para la pastelera</h3>
-                <ol>
-                    <li>En una olla grande y ojalá de fondo grueso, derretir la mantequilla a fuego medio-alto, agregar el choclo congelado y revolver de vez en cuando dejando que el choclo se vaya derritiendo o cocinando, unos 8 minutos.</li>
-                    <li>Agregar la leche, la albahaca, sal, pimienta y merquén si desean y seguir cocinando revolviendo ocasionalmente por unos 10 minutos mas. Con la minipimer, procesar el choclo tratando de que no quede todo de la misma consistencia, cuando estén contentos con el molido.</li>
-                    <li>Agregar la harina de maíz o polenta y seguir cocinando a fuego medio 5 minutos mas, probar y ajustar la sazón, va a espesar, pero no lo quieren seco</li>
-            <li>Armar los pasteles poniendo el pino abajo, luego el pollo asado, pasas, aceitunas y huevo duro (a gusto). Cubrir con la pastelera de choclo y refrigerar o espolvorear con azúcar granulada y hornear a horno 400F o 200C por 45-60 minutos hasta que este burbujeando y dorado encima. Dejar reposar 10 minutos antes de servir.
-            </li>
+            <h3>Para la pastelera</h3>
+            <ol>
+                <li>En una olla grande y ojalá de fondo grueso, derretir la mantequilla a fuego medio-alto, agregar el
+                    choclo congelado y revolver de vez en cuando dejando que el choclo se vaya derritiendo o cocinando,
+                    unos 8 minutos.</li>
+                <li>Agregar la leche, la albahaca, sal, pimienta y merquén si desean y seguir cocinando revolviendo
+                    ocasionalmente por unos 10 minutos mas. Con la minipimer, procesar el choclo tratando de que no
+                    quede todo de la misma consistencia, cuando estén contentos con el molido.</li>
+                <li>Agregar la harina de maíz o polenta y seguir cocinando a fuego medio 5 minutos mas, probar y ajustar
+                    la sazón, va a espesar, pero no lo quieren seco</li>
+                <li>Armar los pasteles poniendo el pino abajo, luego el pollo asado, pasas, aceitunas y huevo duro (a
+                    gusto). Cubrir con la pastelera de choclo y refrigerar o espolvorear con azúcar granulada y hornear
+                    a horno 400F o 200C por 45-60 minutos hasta que este burbujeando y dorado encima. Dejar reposar 10
+                    minutos antes de servir.
+                </li>
 
-                </ol> 
-            </div>
+            </ol>
+        </div>
 
-        </section>
-        <a href="../recetassaladas.html">Volver a Recetas Saladas</a><br>
+    </section>
+    <a href="../recetassaladas.html">Volver a Recetas Saladas</a><br>
 
-        <footer>
-            <p>Todos los derechos reservados.</p> 
-            <a href="../../index.html"> La Cocina de Margarita</a> 
-        </footer>
+    <footer>
+        <p>Todos los derechos reservados.</p>
+        <a href="../../index.html"> La Cocina de Margarita</a>
+    </footer>
 
 
 </body>
