--- a/pages/Recetas dulces/crumblemanzana.html
+++ b/pages/Recetas dulces/crumblemanzana.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href=../../CSS/proyectofinal.css>
+    <title>Cocina de Margarita</title>
+    <link rel="icon" type="image/jpg" href="imagenes.html/favicon_daisy.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,500;0,600;1,200;1,400&display=swap"
+        rel="stylesheet">
 
-    <title>Document</title>
 </head>
 
+
 <body>
+    <header>
+        <div>
+            <h1 id="lacocinademargarita">La Cocina de Margarita</h1>
+        </div>
+
+        <nav class="menuppal">
+            <!--menú de navegación-->
+            <ul class="listamenu">
+                <li><a href="../../index.html" class=" elementomenu active">Inicio</a></li>
+                <li><a href="../recetassaladas.html" class="elementomenu">Recetas Saladas</a></li>
+                <li><a href="../recetasdulces.html" class="elementomenu">Recetas Dulces</a></li>
+                <li><a href="../blog.html" class="elementomenu">Blog</a></li>
+                <li><a href=../contacto.html class="elementomenu">Contacto</a></li>
+
+            </ul>
+
+        </nav>
+
+    </header>
     <div>
         <h1>Crumble de Manzana</h1>
 
