recetas listas con su estilo

--- a/pages/Recetas Saladas/padthai.html
+++ b/pages/Recetas Saladas/padthai.html
@@ -35,8 +35,8 @@
         </nav>
 
     </header>
-    <div>
-        <h1>Pad Thai</h1>
+    <div class="receta_d_s" >
+        <h2 class="titulo_receta">Pad Thai</h2>
 
         <img src="../../imagenes.html/padthai.jpg" alt="padthai.jpg" width="450">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum laudantium ut reiciendis ipsam maiores
@@ -47,12 +47,12 @@
             pariatur, suscipit nobis iste deserunt itaque repellendus impedit rerum aliquam laboriosam eveniet ex cum ea
             harum quidem accusamus soluta dolorem? Expedita.</p>
     </div>
-    <ul>
+    <ul class="tiempoprep">
         <li>Tiempo de preparación: 20 minuos</li>
         <li>Tiempo de Cocción: 40 minutos</li>
 </ul>
-        <section>
-            <div>
+        <section class="cuadroreceta">
+            <div class="ingredientes">
                 <h2>Ingredientes</h2>
                 <ul>
                 <li>200g de fideos de arroz</li>
@@ -73,7 +73,7 @@
                 <li>1 taza de agua</li>
                 </ul>
             </div>
-            <div>
+            <div class="ingredientes">
                 <h2>Preparación paso a paso</h2>
                 <ol>
                     <li>Dejar los fideos de arroz remojando en agua tibia.</li>
@@ -86,7 +86,7 @@
             </div>
 
         </section>
-        <a href="../recetassaladas.html">Volver a Recetas Saladas</a><br>
+    
 
         <footer>
             <p>Todos los derechos reservados.</p> 
