--- a/pages/Recetas dulces/quequemarmol.html
+++ b/pages/Recetas dulces/quequemarmol.html
@@ -36,8 +36,8 @@
 
     </header>
 
-    <div>
-        <h1>Queque Mármol</h1>
+    <div class="receta_d_s" >
+        <h2 class="titulo_receta">Queque Mármol</h2>
 
         <img src="../../imagenes.html/quequemarmol.jpg" alt="queque-marmol" width="450">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum laudantium ut reiciendis ipsam maiores
@@ -48,12 +48,13 @@
             pariatur, suscipit nobis iste deserunt itaque repellendus impedit rerum aliquam laboriosam eveniet ex cum ea
             harum quidem accusamus soluta dolorem? Expedita.</p>
     </div>
-    <ul>
+    <ul class="tiempoprep">
         <li>Tiempo de preparación: 20 minuos</li>
         <li>Tiempo de Cocción: 40 minutos</li>
+    </ul>
 
-        <section>
-            <div>
+        <section class="cuadroreceta">
+            <div class="ingredientes">
                 <h2>Ingredientes</h2>
                 <ul>
                     <li>180 g de mantequilla sin sal a temperatura ambiente</li>
@@ -68,7 +69,7 @@
                     <li>3 cdas leche fresca, entera, descremada, sin lactosa o vegetal (no evaporada!)</li>
                 </ul>
             </div>
-            <div>
+            <div class="ingredientes">
                 <h2>Preparación paso a paso</h2>
                 <ol>
                     <li>Bate la mantequilla con el azúcar y aceite hasta que se haya aclarado la mezcla. Lo puedes hacer
@@ -106,7 +107,7 @@
             </div>
 
         </section>
-        <a href="../recetasdulces.html">Volver a Recetas Dulces</a><br>
+     
         <footer>
             <p>Todos los derechos reservados.</p> 
             <a href="../../index.html"> La Cocina de Margarita</a> 
