--- a/pages/Recetas Saladas/pasteldechoclo.html
+++ b/pages/Recetas Saladas/pasteldechoclo.html
@@ -35,8 +35,8 @@
         </nav>
 
     </header>
-    <div>
-        <h1>Pastel de Choclo</h1>
+    <div class="receta_d_s" >
+        <h2 class="titulo_receta">Pastel de Choclo</h2>
 
         <img src="../../imagenes.html/pasteldechoclo.jpeg" alt="pasteldechoclo.jpg" width="450">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum laudantium ut reiciendis ipsam maiores
@@ -47,12 +47,12 @@
             pariatur, suscipit nobis iste deserunt itaque repellendus impedit rerum aliquam laboriosam eveniet ex cum ea
             harum quidem accusamus soluta dolorem? Expedita.</p>
     </div>
-    <ul>
+    <ul class="tiempoprep">
         <li>Tiempo de preparación: 60minuos</li>
         <li>Tiempo de Cocción: 60 minutos</li>
     </ul>
-    <section>
-        <div>
+    <section class="cuadroreceta">
+        <div class="ingredientes">
             <h2>Ingredientes</h2>
 
             <h3>Para la pastelera</h3>
@@ -78,7 +78,7 @@
                 <li>2 cucharadas de harina, opcional</li>
             </ul>
         </div>
-        <div>
+        <div class="ingredientes">
             <h2>Preparación paso a paso</h2>
             <h3>Para el pino</h3>
             <ol>
@@ -112,7 +112,7 @@
         </div>
 
     </section>
-    <a href="../recetassaladas.html">Volver a Recetas Saladas</a><br>
+
 
     <footer>
         <p>Todos los derechos reservados.</p>
