--- a/pages/Recetas dulces/crumblemanzana.html
+++ b/pages/Recetas dulces/crumblemanzana.html
@@ -35,8 +35,8 @@
         </nav>
 
     </header>
-    <div>
-        <h1>Crumble de Manzana</h1>
+    <div class="receta_d_s" >
+        <h2 class="titulo_receta">Crumble de Manzana</h2>
 
         <img src="../../imagenes.html/crumbledemanzana.jpg" alt="crumble-de-manzana.jpg" width="450">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum laudantium ut reiciendis ipsam maiores
@@ -47,13 +47,14 @@
             pariatur, suscipit nobis iste deserunt itaque repellendus impedit rerum aliquam laboriosam eveniet ex cum ea
             harum quidem accusamus soluta dolorem? Expedita.</p>
     </div>
-    <ul>
+
+    <ul class="tiempoprep">
         <li>Tiempo de preparación: 30 minuos</li>
         <li>Tiempo de Cocción: 30 minutos</li>
     </ul>
 
-        <section>
-            <div>
+        <section class="cuadroreceta">
+            <div class="ingredientes">
                 <h2>Ingredientes</h2>
                 <ul>
                     <li>5 manzanas medianas</li>
@@ -63,7 +64,7 @@
                     <li>Canela en polvo a gusto</li>
                 </ul>
             </div>
-            <div>
+            <div class="ingredientes">
                 <h2>Preparación paso a paso</h2>
                 <ol>
                     <li>Primero precalentamos el horno a 160ºC. Mientras el horno toma temperatura, pelamos las manzanas y las cortamos en dados de un centímetro de lado más o menos.</li>
@@ -75,7 +76,7 @@
             </div>
 
         </section>
-        <a href="../recetasdulces.html">Volver a Recetas Dulces</a><br>
+    
 
         <footer>
             <p>Todos los derechos reservados.</p> 
