--- a/pages/blog.html
+++ b/pages/blog.html
@@ -7,8 +7,10 @@
     <title>Cocina de Margarita</title>
     <link rel="icon" type="image/jpg" href="imagenes.html/favicon_daisy.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,500;0,600;1,200;1,400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,500;0,600;1,200;1,400&display=swap"
+        rel="stylesheet">
 
 
 
@@ -36,26 +38,43 @@
         </nav>
     </header>
 
-<div class="seccioninicio"><h2 class=>Blog</h2></div>
-        
+    <div class="seccioninicio">
+        <h2 class=>Blog</h2>
+    </div>
 
 
-    <article>
-        <h3>Mi Lista favorita para cocinar</h3>
-        <iframe style="border-radius:12px"
-            src="https://open.spotify.com/embed/playlist/37i9dQZF1DWUQaB5AfW9Oa?utm_source=generator" width="100%"
-            height="380" frameBorder="0" allowfullscreen=""
-            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-    </article>
+    <div class="blog">
+        <article class="articuloblog">
+            <h3>Mi Lista favorita para cocinar</h3>
+            
+            <iframe style="border-radius:12px"
+                src="https://open.spotify.com/embed/playlist/5uO6uCO0UZJYYpEFAnArCH?utm_source=generator" width="100%"
+                height="380" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"></iframe>
 
-    <article>
-        <h3>Trucos de Cocina</h3>
-        <iframe width="857" height="482" src="https://www.youtube.com/embed/BHcyuzXRqLs" title="50 Cooking Tips With Gordon Ramsay | Part One" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </article>
+            <article class="articuloblog">
+                <h3>Trucos de Cocina</h3>
+                <iframe width="857" height="482" src="https://www.youtube.com/embed/BHcyuzXRqLs"
+                    title="50 Cooking Tips With Gordon Ramsay | Part One" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </article>
+            <article class="articuloblog">
+
+                <h3>Street Food</h3>
+                <iframe width="853" height="480" src="https://www.youtube.com/embed/t89GiffdnzY"
+                    title="Yummyboy Comida de la calle Top10" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </article>
+    </div>
+
+
 
     <footer>
-        <p>Todos los derechos reservados.</p> 
-        <a href="../index.html"> La Cocina de Margarita</a> 
+        <p>Todos los derechos reservados.</p>
+        <a href="../index.html"> La Cocina de Margarita</a>
     </footer>
 </body>
 
