todos los titulos centrados

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -36,9 +36,14 @@
 
 
 
-<div class="seccioninicio"><h2 class=>¡Contáctame!</h2></div>
         
-<div class="container">
+
+
+
+<div class="seccioninicio container">
+    <h2>¡Contáctame!</h2>
+
+
     <section class="formulariocontacto">
         <form>
             <div id="formulario">        
