--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/proyectofinal.css">
     <title>Cocina de Margarita</title>
     <link rel="icon" type="image/jpg" href="imagenes.html/favicon_daisy.png">
@@ -19,22 +20,24 @@
 
 <body>
     <header>
-        <div>
+        <div class="contenedor_header">
             <h1 id="lacocinademargarita"> La Cocina de Margarita</h1>
+
+
+            <nav class="menuppal">
+                <!--menú de navegación-->
+                <ul class="listamenu">
+                    <li><a href="index.html" class=" elementomenu active">Inicio</a></li>
+                    <li><a href="pages/recetassaladas.html" class="elementomenu">Recetas Saladas</a></li>
+                    <li><a href="pages/recetasdulces.html" class="elementomenu">Recetas Dulces</a></li>
+                    <li><a href="pages/blog.html" class="elementomenu">Blog</a></li>
+                    <li><a href=pages/contacto.html class="elementomenu">Contacto</a></li>
+
+                </ul>
+
+            </nav>
         </div>
 
-        <nav class="menuppal">
-            <!--menú de navegación-->
-            <ul class="listamenu">
-                <li><a href="index.html" class=" elementomenu active">Inicio</a></li>
-                <li><a href="pages/recetassaladas.html" class="elementomenu">Recetas Saladas</a></li>
-                <li><a href="pages/recetasdulces.html" class="elementomenu">Recetas Dulces</a></li>
-                <li><a href="pages/blog.html" class="elementomenu">Blog</a></li>
-                <li><a href=pages/contacto.html class="elementomenu">Contacto</a></li>
-
-            </ul>
-
-        </nav>
     </header>
     <div class="container">
 
@@ -86,14 +89,14 @@
                 <div class="contenido_inspoinicio">
                     <img src="imagenes.html/PinchofYum.jpg" class="img-inspo">
 
-                  
-                        <div class="contenido_inspoinicio_col">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, eos! Alias consectetur, incidunt
-                                iure
-                                quibusdam quia corrupti modi! Officiis, perferendis!</p>
-    
-                            <a href="https://pinchofyum.com/" class="botonreceta">Ver</a>
-                        </div>
+
+                    <div class="contenido_inspoinicio_col">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, eos! Alias consectetur, incidunt
+                            iure
+                            quibusdam quia corrupti modi! Officiis, perferendis!</p>
+
+                        <a href="https://pinchofyum.com/" class="botonreceta">Ver</a>
+                    </div>
                 </div>
 
             </div>
