--- a/pages/recetassaladas.html
+++ b/pages/recetassaladas.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href=../CSS/proyectofinal.css>
     <title>Cocina de Margarita</title>
     <link rel="icon" type="image/jpg" href="imagenes.html/favicon_daisy.png">
