--- a/pages/recetasdulces.html
+++ b/pages/recetasdulces.html
@@ -10,30 +10,34 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,500;0,600;1,200;1,400&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
+
+
+
 
 </head>
 
-
 <body>
     <header>
-        <div>
-            <h1 id="lacocinademargarita">La Cocina de Margarita</h1>
+        <div class="contenedor_header">
+            <h1 id="lacocinademargarita"> La Cocina de Margarita</h1>
+
+
+            <nav class="menuppal">
+                <!--menú de navegación-->
+                <ul class="listamenu">
+                    <li><a href="index.html" class=" elementomenu ">Inicio</a></li>
+                    <li><a href="pages/recetassaladas.html" class="elementomenu">Recetas Saladas</a></li>
+                    <li><a href="pages/recetasdulces.html" class="elementomenu">Recetas Dulces</a></li>
+                    <li><a href="pages/blog.html" class="elementomenu">Blog</a></li>
+                    <li><a href=pages/contacto.html class="elementomenu">Contacto</a></li>
+
+                </ul>
+
+            </nav>
         </div>
 
-        <nav class="menuppal">
-            <!--menú de navegación-->
-            <ul class="listamenu">
-                <li><a href="../index.html" class=" elementomenu active">Inicio</a></li>
-                <li><a href="../pages/recetassaladas.html" class="elementomenu">Recetas Saladas</a></li>
-                <li><a href="recetasdulces.html" class="elementomenu">Recetas Dulces</a></li>
-                <li><a href="../pages/blog.html" class="elementomenu">Blog</a></li>
-                <li><a href=../pages/contacto.html class="elementomenu">Contacto</a></li>
-
-            </ul>
-
-        </nav>
     </header>
 
 
