--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <nav class="menuppal">
                 <!--menú de navegación-->
                 <ul class="listamenu">
-                    <li><a href="index.html" class=" elementomenu active">Inicio</a></li>
+                    <li><a href="index.html" class=" elementomenu ">Inicio</a></li>
                     <li><a href="pages/recetassaladas.html" class="elementomenu">Recetas Saladas</a></li>
                     <li><a href="pages/recetasdulces.html" class="elementomenu">Recetas Dulces</a></li>
                     <li><a href="pages/blog.html" class="elementomenu">Blog</a></li>
