--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -27,12 +27,11 @@
             <nav class="menuppal">
                 <!--menú de navegación-->
                 <ul class="listamenu">
-                    <li><a href="index.html" class=" elementomenu ">Inicio</a></li>
+                    <li><a href="index.html" class="elementomenu">Inicio</a></li>
                     <li><a href="pages/recetassaladas.html" class="elementomenu">Recetas Saladas</a></li>
                     <li><a href="pages/recetasdulces.html" class="elementomenu">Recetas Dulces</a></li>
                     <li><a href="pages/blog.html" class="elementomenu">Blog</a></li>
                     <li><a href=pages/contacto.html class="elementomenu">Contacto</a></li>
-
                 </ul>
 
             </nav>
