--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -24,10 +24,10 @@
         <!--menú de navegación-->
         <ul class="listamenu">
             <li><a href="../index.html" class=" elementomenu active">Inicio</a></li>
-            <li><a href="../pages/recetassaladas.html" class="elementomenu">Recetas Saladas</a></li>
-            <li><a href="../pages/recetasdulces.html" class="elementomenu">Recetas Dulces</a></li>
-            <li><a href="../pages/blog.html" class="elementomenu">Blog</a></li>
-            <li><a href=contacto.html class="elementomenu">Contacto</a></li>
+            <li><a href="recetassaladas.html" class="elementomenu">Recetas Saladas</a></li>
+            <li><a href="recetasdulces.html" class="elementomenu">Recetas Dulces</a></li>
+            <li><a href="" class="elementomenu">Blog</a></li>
+            <li><a href="contacto.html" class="elementomenu">Contacto</a></li>
 
         </ul>
 
