--- a/pages/blog.html
+++ b/pages/blog.html
@@ -28,10 +28,10 @@
             <!--menú de navegación-->
             <ul class="listamenu">
                 <li><a href="../index.html" class=" elementomenu active">Inicio</a></li>
-                <li><a href="../pages/recetassaladas.html" class="elementomenu">Recetas Saladas</a></li>
-                <li><a href="../pages/recetasdulces.html" class="elementomenu">Recetas Dulces</a></li>
+                <li><a href="recetassaladas.html" class="elementomenu">Recetas Saladas</a></li>
+                <li><a href="recetasdulces.html" class="elementomenu">Recetas Dulces</a></li>
                 <li><a href="blog.html" class="elementomenu">Blog</a></li>
-                <li><a href=../pages/contacto.html class="elementomenu">Contacto</a></li>
+                <li><a href="contacto.html" class="elementomenu">Contacto</a></li>
 
             </ul>
 
@@ -46,7 +46,7 @@
     <div class="blog">
         <article class="articuloblog">
             <h3>Mi Lista favorita para cocinar</h3>
-            
+
             <iframe style="border-radius:12px"
                 src="https://open.spotify.com/embed/playlist/5uO6uCO0UZJYYpEFAnArCH?utm_source=generator" width="100%"
                 height="380" frameBorder="0" allowfullscreen=""
