--- a/pages/recetassaladas.html
+++ b/pages/recetassaladas.html
@@ -27,11 +27,11 @@
             <nav class="menuppal">
                 <!--menú de navegación-->
                 <ul class="listamenu">
-                    <li><a href="index.html" class=" elementomenu ">Inicio</a></li>
-                    <li><a href="pages/recetassaladas.html" class="elementomenu">Recetas Saladas</a></li>
-                    <li><a href="pages/recetasdulces.html" class="elementomenu">Recetas Dulces</a></li>
-                    <li><a href="pages/blog.html" class="elementomenu">Blog</a></li>
-                    <li><a href=pages/contacto.html class="elementomenu">Contacto</a></li>
+                    <li><a href="../index.html" class=" elementomenu ">Inicio</a></li>
+                    <li><a href="recetassaladas.html" class="elementomenu">Recetas Saladas</a></li>
+                    <li><a href="recetasdulces.html" class="elementomenu">Recetas Dulces</a></li>
+                    <li><a href="blog.html" class="elementomenu">Blog</a></li>
+                    <li><a href="contacto.html" class="elementomenu">Contacto</a></li>
 
                 </ul>
 
