--- a/pages/recetassaladas.html
+++ b/pages/recetassaladas.html
@@ -31,7 +31,7 @@
                     <li><a href="recetassaladas.html" class="elementomenu">Recetas Saladas</a></li>
                     <li><a href="recetasdulces.html" class="elementomenu">Recetas Dulces</a></li>
                     <li><a href="blog.html" class="elementomenu">Blog</a></li>
-                    <li><a href="contacto.html" class="elementomenu">Contacto</a></li>
+                    <li><a href="contacto.htm"}l" class="elementomenu">Contacto</a></li>
 
                 </ul>
 
