--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../CSS/proyectofinal.css">
+    <link rel="stylesheet" href="../CSS/estilos.css">
     <title>Cocina de Margarita</title>
     <link rel="icon" type="image/jpg" href="imagenes.html/favicon_daisy.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
