--- a/pages/recetasdulces.html
+++ b/pages/recetasdulces.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/proyectofinal.css">
+    <link rel="stylesheet" href="../CSS/estilos.css">
     <title>Cocina de Margarita</title>
     <link rel="icon" type="image/jpg" href="imagenes.html/favicon_daisy.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
