--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -35,12 +35,7 @@
 </header>
 
 
-
-        
-
-
-
-<div class="seccioninicio container">
+<div class="seccioninicio">
     <h2>¡Contáctame!</h2>
 
 
