--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </div>
 
     </header>
+
     <div class="container">
 
 
@@ -127,7 +128,7 @@
                 <a href=#lacocinademargarita> La Cocina de Margarita</a>
             </footer>
         </div>
-
+    </div>
 
 
 
