--- a/index.html
+++ b/index.html
@@ -12,17 +12,13 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-
-
-
-
 </head>
+
 
 <body>
     <header>
         <div class="contenedor_header">
             <h1 id="lacocinademargarita"> La Cocina de Margarita</h1>
-
 
             <nav class="menuppal">
                 <!--menú de navegación-->
@@ -33,16 +29,11 @@
                     <li><a href="pages/blog.html" class="elementomenu">Blog</a></li>
                     <li><a href=pages/contacto.html class="elementomenu">Contacto</a></li>
                 </ul>
-
             </nav>
         </div>
-
     </header>
 
     <div class="container">
-
-
-
         <section id="recetasdelasemana" class="seccioninicio">
             <h2 class="subtituloinicio">Recetas de la Semana</h2>
             <div class="recetas_inicio">
@@ -51,7 +42,7 @@
                         <a href="pages/Recetas Saladas/pasteldechoclo.html"> Pastel de choclo</a>
                     </h3>
                     <img src="imagenes.html/pasteldechoclo4.jpg" alt="pasteldechoclo.jpg" class="img-index">
-                    <p>a itaque. Ullam, distinctio consectetur aut impedit perspiciatis eaque dolores.</p>
+                    <p>El pastel de choclo es una delicia de la cocina tradicional Chilena. Imposible no deleitar a todos en un almuerzo dominguero con este recetón!</p>
                     <a href="pages/Recetas Saladas/pasteldechoclo.html" class="botonreceta">Ver</a>
                 </div>
 
@@ -60,19 +51,14 @@
                         <a href="pages/Recetas dulces/quequemarmol.html"> Queque Marmol</a>
                     </h3>
                     <img src="imagenes.html/quequemarmol3.jpg" alt="quequemarmol.jpg" class="img-index">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae deleniti autem saepe voluptatum
-                        repudiandae in unde accusantium quo dolorem error? Asperiores quis in minus quae.</p>
+                    <p>Este queque mármol que literalmente se deshace en la boca, es una receta de mi abuela paterna. Con notas de chocolate y vainilla, es el infaltable de la hora del té.</p>
                     <a href="pages/Recetas dulces/quequemarmol.html" class="botonreceta">Ver</a>
                 </div>
-
-
 
                 <div class="recetainicio">
                     <h3><a href="pages/Recetas Saladas/padthai.html">Pad Thai</a></h3>
                     <img src="imagenes.html/padthaigaleri.jpg" class="img-index"><br>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero iusto, earum quia commodi illum
-                        perferendis
-                        natus laudantium error! Iste magni debitis cumque sunt, rerum pariatur.</p>
+                    <p>El delicioso pad-thai que les dejo aquí es una adaptación de Margarita de este famoso plato Tailandés. Háganlo, no se arepentirán!</p>
                     <a href="pages/Recetas Saladas/padthai.html" class="botonreceta">Ver</a>
                 </div>
             </div>
@@ -91,9 +77,7 @@
 
 
                     <div class="contenido_inspoinicio_col">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, eos! Alias consectetur, incidunt
-                            iure
-                            quibusdam quia corrupti modi! Officiis, perferendis!</p>
+                        <p>En este blog "Pinch of Yum" escrito por Lindsay, además de encontrar recetas novedosas y exquisitas, puedes encontrar datos de viajes, estilo de vida, casa, naternindad, mascotas y mucho más!</p>
 
                         <a href="https://pinchofyum.com/" class="botonreceta">Ver</a>
                     </div>
@@ -108,9 +92,7 @@
                 <div class="contenido_inspoinicio">
                     <img src="imagenes.html/RecipeGirl.jpg" alt="recipegirl.jpg">
                     <div class="contenido_inspoinicio_col">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, eos! Alias consectetur, incidunt
-                            iure
-                            quibusdam quia corrupti modi! Officiis, perferendis!</p>
+                        <p>Es un blog donde pueden encontrar más de 3000 novedosas recetas para cena, almuerzo, desayuno u hora del té. Además de las maravillosas fotos, cada receta incluye la información nutricional, lo que es muy útil!</p>
 
                         <a href="imagenes.html/RecipeGirl.jpg" class="botonreceta">Ver</a>
                     </div>
@@ -118,10 +100,6 @@
                 </div>
 
             </div>
-
-
-
-
 
             <footer>
                 <p>Todos los derechos reservados.</p>
