--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/estilos.css">
     <title>Cocina de Margarita</title>
-    <link rel="icon" type="image/jpg" href="imagenes.html/favicon_daisy.png">
+    <link rel="icon" type="image/jpg" href="../imagenes.html/favicon_daisy.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,500;0,600;1,200;1,400&display=swap" rel="stylesheet">
