--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li><a href="index.html" class="elementomenu">Inicio</a></li>
                     <li><a href="pages/recetassaladas.html" class="elementomenu">Recetas Saladas</a></li>
                     <li><a href="pages/recetasdulces.html" class="elementomenu">Recetas Dulces</a></li>
-                    <li><a href="pages/blog.html" class="elementomenu">Blog</a></li>
+                    <li><a href="" class="elementomenu">Blog</a></li>
                     <li><a href=pages/contacto.html class="elementomenu">Contacto</a></li>
                 </ul>
             </nav>
