--- a/pages/Recetas Saladas/padthai.html
+++ b/pages/Recetas Saladas/padthai.html
@@ -41,20 +41,17 @@
         <h2 class="titulo_receta">Pad Thai</h2>
 
         <img src="../../imagenes.html/padthai.jpg" alt="padthai.jpg" width="450">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum laudantium ut reiciendis ipsam maiores
-            facere
-            exercitationem iste ipsum provident cumque, tempora est consequuntur necessitatibus ratione obcaecati atque
-            libero qui deleniti fugit repellat, eveniet placeat laboriosam voluptatem repellendus. Perspiciatis
-            molestias
-            pariatur, suscipit nobis iste deserunt itaque repellendus impedit rerum aliquam laboriosam eveniet ex cum ea
-            harum quidem accusamus soluta dolorem? Expedita.</p>
+        <p>El Pad Thai es un delicioso plato de fideos que destaca por su combinación de sabores y texturas. Lleva la
+            proteína de las gambas, el crujiente de los cacahuetes, un punto picante del chile y el frescor de la lima
+            ¡Y sólo se tarda 15 minutos en prepararlos! Son fáciles, rápidos y super adictivos: la receta perfecta para
+            iniciarse en la gastronomía tailandesa.</p>
     </div>
 
     <ul class="tiempoprep">
         <li>Tiempo de preparación: 20 minuos</li>
         <li>Tiempo de Cocción: 40 minutos</li>
     </ul>
-    
+
     <section class="cuadroreceta">
         <div class="ingredientes">
             <h2>Ingredientes</h2>
