--- a/pages/Recetas Saladas/pasteldechoclo.html
+++ b/pages/Recetas Saladas/pasteldechoclo.html
@@ -36,17 +36,16 @@
         </nav>
 
     </header>
-    <div class="receta_d_s" >
+    <div class="receta_d_s">
         <h2 class="titulo_receta">Pastel de Choclo</h2>
 
         <img src="../../imagenes.html/pasteldechoclo.jpeg" alt="pasteldechoclo.jpg" width="450">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum laudantium ut reiciendis ipsam maiores
-            facere
-            exercitationem iste ipsum provident cumque, tempora est consequuntur necessitatibus ratione obcaecati atque
-            libero qui deleniti fugit repellat, eveniet placeat laboriosam voluptatem repellendus. Perspiciatis
-            molestias
-            pariatur, suscipit nobis iste deserunt itaque repellendus impedit rerum aliquam laboriosam eveniet ex cum ea
-            harum quidem accusamus soluta dolorem? Expedita.</p>
+        <p>El pastel de choclo es un delicioso plato de temporada cuya versión locasl se originó en los campos de Chile
+            hace más de 200 años, una comida casera y popular, imperdible en su mejor temporada.
+            Fundamental en la gastronomía chilena, la mejor versión del pastel de choclo es preparada con los primeros
+            choclos del verano, aunqye puede ser elaborado en cualquier temporada con choclo desgranado o pastelera de
+            choclo congelada habitualmente disponibles en el mercado.
+        </p>
     </div>
     <ul class="tiempoprep">
         <li>Tiempo de preparación: 60minuos</li>
