--- a/pages/Recetas dulces/crumblemanzana.html
+++ b/pages/Recetas dulces/crumblemanzana.html
@@ -28,7 +28,7 @@
                 <li><a href="../../index.html" class=" elementomenu active">Inicio</a></li>
                 <li><a href="../recetassaladas.html" class="elementomenu">Recetas Saladas</a></li>
                 <li><a href="../recetasdulces.html" class="elementomenu">Recetas Dulces</a></li>
-                <li><a href="../blog.html" class="elementomenu">Blog</a></li>
+                <li><a href="" class="elementomenu">Blog</a></li>
                 <li><a href=../contacto.html class="elementomenu">Contacto</a></li>
 
             </ul>
@@ -36,17 +36,16 @@
         </nav>
 
     </header>
-    <div class="receta_d_s" >
+    <div class="receta_d_s">
         <h2 class="titulo_receta">Crumble de Manzana</h2>
 
         <img src="../../imagenes.html/crumbledemanzana.jpg" alt="crumble-de-manzana.jpg" width="450">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum laudantium ut reiciendis ipsam maiores
-            facere
-            exercitationem iste ipsum provident cumque, tempora est consequuntur necessitatibus ratione obcaecati atque
-            libero qui deleniti fugit repellat, eveniet placeat laboriosam voluptatem repellendus. Perspiciatis
-            molestias
-            pariatur, suscipit nobis iste deserunt itaque repellendus impedit rerum aliquam laboriosam eveniet ex cum ea
-            harum quidem accusamus soluta dolorem? Expedita.</p>
+        <p>El crumble de manzana o apple crumble es un postre de origen inglés que combina la textura crujiente de la
+            superficie con el tierno interior de manzana y canela. También sorprende el contraste de temperaturas, al
+            servirlo caliente acompañado de helado.
+
+            Es muy fácil de preparar en el horno y puede ser el dulce perfecto para una ocasión especial o para darse un
+            capricho.</p>
     </div>
 
     <ul class="tiempoprep">
@@ -54,35 +53,39 @@
         <li>Tiempo de Cocción: 30 minutos</li>
     </ul>
 
-        <section class="cuadroreceta">
-            <div class="ingredientes">
-                <h2>Ingredientes</h2>
-                <ul>
-                    <li>5 manzanas medianas</li>
-                    <li>175 g de harina de trigo o de avena</li>
-                    <li>175 gr de azúcar</li>
-                    <li>90 g de manteuilla y un poquito más para engrasar el molde</li>
-                    <li>Canela en polvo a gusto</li>
-                </ul>
-            </div>
-            <div class="ingredientes">
-                <h2>Preparación paso a paso</h2>
-                <ol>
-                    <li>Primero precalentamos el horno a 160ºC. Mientras el horno toma temperatura, pelamos las manzanas y las cortamos en dados de un centímetro de lado más o menos.</li>
-                    <li>Engrasamos con mantequilla un molde rectangular (de unos 22 x 15 cm) y se colocan las manzanas en una capa uniforme. Las espolvoreamos con tres cucharadas soperas de azúcar y con canela.</li>
-                    <li>En un bol grande se coloca la harina, el azúcar restante y la mantequilla en trocitos y se mezcla frotando con las manos para formar migas ("crumble"). Las migas se dejan enfriar unos 15 minutos en el frigorífico, y después se vierten sobre las manzanas.</li>
-                    <li>Horneamos a 160ºC durante unos 30 minutos (depende del horno)</li>
-                    <li>Servir frío o templado y acompañado de helado de vainilla</li>
-                </ol>
-            </div>
+    <section class="cuadroreceta">
+        <div class="ingredientes">
+            <h2>Ingredientes</h2>
+            <ul>
+                <li>5 manzanas medianas</li>
+                <li>175 g de harina de trigo o de avena</li>
+                <li>175 gr de azúcar</li>
+                <li>90 g de manteuilla y un poquito más para engrasar el molde</li>
+                <li>Canela en polvo a gusto</li>
+            </ul>
+        </div>
+        <div class="ingredientes">
+            <h2>Preparación paso a paso</h2>
+            <ol>
+                <li>Primero precalentamos el horno a 160ºC. Mientras el horno toma temperatura, pelamos las manzanas y
+                    las cortamos en dados de un centímetro de lado más o menos.</li>
+                <li>Engrasamos con mantequilla un molde rectangular (de unos 22 x 15 cm) y se colocan las manzanas en
+                    una capa uniforme. Las espolvoreamos con tres cucharadas soperas de azúcar y con canela.</li>
+                <li>En un bol grande se coloca la harina, el azúcar restante y la mantequilla en trocitos y se mezcla
+                    frotando con las manos para formar migas ("crumble"). Las migas se dejan enfriar unos 15 minutos en
+                    el frigorífico, y después se vierten sobre las manzanas.</li>
+                <li>Horneamos a 160ºC durante unos 30 minutos (depende del horno)</li>
+                <li>Servir frío o templado y acompañado de helado de vainilla</li>
+            </ol>
+        </div>
 
-        </section>
-    
+    </section>
 
-        <footer>
-            <p>Todos los derechos reservados.</p> 
-            <a href="../../index.html"> La Cocina de Margarita</a> 
-        </footer>
+
+    <footer>
+        <p>Todos los derechos reservados.</p>
+        <a href="../../index.html"> La Cocina de Margarita</a>
+    </footer>
 </body>
 
 </html>
