--- a/pages/Recetas dulces/quequemarmol.html
+++ b/pages/Recetas dulces/quequemarmol.html
@@ -28,7 +28,7 @@
                 <li><a href="../../index.html" class=" elementomenu active">Inicio</a></li>
                 <li><a href="../recetassaladas.html" class="elementomenu">Recetas Saladas</a></li>
                 <li><a href="../recetasdulces.html" class="elementomenu">Recetas Dulces</a></li>
-                <li><a href="../blog.html" class="elementomenu">Blog</a></li>
+                <li><a href="" class="elementomenu">Blog</a></li>
                 <li><a href=../contacto.html class="elementomenu">Contacto</a></li>
 
             </ul>
@@ -41,13 +41,12 @@
         <h2 class="titulo_receta">Queque Mármol</h2>
 
         <img src="../../imagenes.html/quequemarmol.jpg" alt="queque-marmol" width="450">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum laudantium ut reiciendis ipsam maiores
-            facere
-            exercitationem iste ipsum provident cumque, tempora est consequuntur necessitatibus ratione obcaecati atque
-            libero qui deleniti fugit repellat, eveniet placeat laboriosam voluptatem repellendus. Perspiciatis
-            molestias
-            pariatur, suscipit nobis iste deserunt itaque repellendus impedit rerum aliquam laboriosam eveniet ex cum ea
-            harum quidem accusamus soluta dolorem? Expedita.</p>
+        <p>El queuque mármol es un deliciosos bizcocho de vainilla y chocolate, que al sacarlo del horno tiene un
+            maravilloso aspecto marmoleado. En mi casa toda la vida comíamos este queque a la hora del té, y yo todavía
+            klo sigo haciendo para mis hijos, que les encanta.
+            Te invito a hacer esta deliciosa receta para compartirla con toda tu familia en un rico desayuno, picnic u
+            hora del té
+        </p>
     </div>
     <ul class="tiempoprep">
         <li>Tiempo de preparación: 20 minuos</li>
