--- a/pages/recetassaladas.html
+++ b/pages/recetassaladas.html
@@ -30,7 +30,7 @@
                     <li><a href="../index.html" class=" elementomenu ">Inicio</a></li>
                     <li><a href="recetassaladas.html" class="elementomenu">Recetas Saladas</a></li>
                     <li><a href="recetasdulces.html" class="elementomenu">Recetas Dulces</a></li>
-                    <li><a href="blog.html" class="elementomenu">Blog</a></li>
+                    <li><a href="" class="elementomenu">Blog</a></li>
                     <li><a href="contacto.html" class="elementomenu">Contacto</a></li>
 
                 </ul>
