--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/estilos.css">
-    <title>Cocina de Margarita</title>
+    <title>Cocina de Margarita-Contacto</title>
     <link rel="icon" type="image/jpg" href="../imagenes.html/favicon_daisy.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
